--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -63,6 +63,9 @@ jobs:
       run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
 
     - name: Update feeds
+      run: cd openwrt && ./scripts/feeds clean 
+    
+    - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
 
     - name: Install feeds
